# citadel

./: .actrc  .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
crates/citadel-agent/: Cargo.toml
crates/citadel-agent/src/: http.rs  lib.rs  main.rs
crates/citadel-agent/tests/: http_smoke.rs  logship_http.rs  mesh.rs  mss_identity.rs  mtls_transport.rs  node_validation.rs  reference_http.rs  threshold_sign.rs  tls_identity.rs
crates/citadel-beacon/: Cargo.toml
crates/citadel-beacon/src/: bls.rs  lib.rs
crates/citadel-beacon/tests/: beacon_gossip.rs
crates/citadel-ca/: Cargo.toml
crates/citadel-ca/src/: lib.rs
crates/citadel-ca/tests/: ca_signing_live.rs
crates/citadel-caps/: Cargo.toml
crates/citadel-caps/src/: lib.rs
crates/citadel-caps/tests/: cap_issuance_live.rs
crates/citadel-control-plane/: Cargo.toml
crates/citadel-control-plane/assets/: dashboard.html
crates/citadel-control-plane/examples/: dashboard_demo.rs
crates/citadel-control-plane/src/: api.rs  daemon.rs  lib.rs  model.rs  operator.rs  pg_store.rs  redb_store.rs  shard.rs  store.rs
crates/citadel-control-plane/tests/: cp5_operator.rs  cp7_daemon.rs  cp7_load_bench.rs  cp7_scale.rs  integration.rs  mss_secrets.rs  redb_store.rs
crates/citadel-facts/: Cargo.toml
crates/citadel-facts/src/: lib.rs
crates/citadel-facts/tests/: fact_gossip.rs
crates/citadel-federation/: Cargo.toml
crates/citadel-federation/src/: lib.rs
crates/citadel-mesh/: Cargo.toml
crates/citadel-mesh/src/: application.rs  attest.rs  crypto.rs  enrollment.rs  erasure.rs  evidence.rs  harness.rs  id.rs  lib.rs  logship.rs  membership.rs  node.rs  promotion.rs  quarantine.rs  reference.rs  release.rs  runtime.rs  rvp.rs  state.rs  store.rs  types.rs  witness.rs
crates/citadel-mesh/tests/: a3_artifact_extraction.rs  application.rs  attest_result_signature.rs  endorsement.rs  firmware_shipping.rs  ima_shipping.rs  late_join.rs  logship_checkpoint.rs  logship_erasure.rs  logship_evidence.rs  logship_mesh.rs  logship_migration.rs  observer.rs  persistence.rs  phase0.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  quarantine_gossip.rs  reference_transition.rs  release_gossip.rs  runtime_escalation.rs  rvp.rs  tls_roster.rs  x509_authority.rs
crates/citadel-metrics-exporter/: Cargo.toml
crates/citadel-metrics-exporter/src/: lib.rs
crates/citadel-mss/: Cargo.toml
crates/citadel-mss/src/: lib.rs  session.rs  share_store.rs  threshold.rs  tsig.rs
crates/citadel-mss/src/threshold/: vsss.rs
crates/citadel-mss/tests/: churn_scenario.rs  sign_gossip.rs
crates/citadel-otel-schema/: Cargo.toml
crates/citadel-spiffe/: Cargo.toml
crates/citadel-spire-controller/: Cargo.toml  build.rs
crates/citadel-spire-controller/deploy/: controller-server.conf  run-controller-it.sh
crates/citadel-spire-controller/src/: lib.rs
crates/citadel-spire-controller/tests/: entry_api.rs
crates/citadel-spire-plugin/: Cargo.toml  README.md  build.rs
crates/citadel-spire-plugin/deploy/: agent.conf  docker-compose.yml  server.conf  trust.json
crates/citadel-spire-plugin/src/: agent.rs  lib.rs  main.rs  mtls.rs  runtime.rs
crates/citadel-spire-plugin/tests/: attestation_pair.rs  go_plugin_automtls.rs  go_plugin_host.rs  round_trip.rs
crates/citadel-telemetry/: Cargo.toml
crates/citadel-telemetry/examples/: emit_containment.rs
crates/citadel-telemetry/src/: lib.rs
crates/citadel-tripwire/: Cargo.toml
crates/citadel-tripwire/src/: lib.rs
crates/citadel-tripwire/tests/: tripwire_quarantine.rs
crates/citadel-trust-sync/: Cargo.toml
crates/citadel-trust-sync/src/: lib.rs
crates/citadel-trust-sync/tests/: sync_live.rs
crates/tpm-cli/: Cargo.toml
crates/tpm-cli/src/: app.rs  main.rs
crates/tpm-cli/src/commands/: key.rs  mod.rs
crates/tpm-core/: Cargo.toml
crates/tpm-core/src/: eventlog.rs  ima.rs  lib.rs  secure_log_signer.rs  sys.rs  vtpm_credential.rs
crates/tpm-core/src/backend/: hardware.rs  mock.rs  mod.rs  swtpm.rs  tpm12.rs  traits.rs  vtpm.rs
crates/tpm-core/src/diag/: codes.rs  error.rs  mod.rs  report.rs
crates/tpm-core/src/model/: approval.rs  identity.rs  mod.rs  object.rs  policy.rs  profile.rs
crates/tpm-core/src/output/: format.rs  mod.rs
crates/tpm-core/src/policy/: dsl.rs  manifest.rs  mod.rs
crates/tpm-core/src/secure_log/: checkpoint.rs  encoder.rs  merkle.rs  mod.rs  native.rs
crates/tpm-core/src/service/: fragility.rs  graph.rs  identity.rs  keys.rs  mod.rs  plan.rs  reconcile.rs
crates/tpm-core/src/store/: memory.rs  migrations.rs  mod.rs  schema.rs  sqlite.rs  traits.rs
crates/tpm-core/tests/: eventlog_corpus.rs  ima_corpus.rs  integration.rs  smoke.rs  swtpm_integration.rs
crates/tpm-core/tests/fixtures/eventlog/: README.md  seabios-q35-tpm2-amd64.sha256  ubuntu-24.04-ovmf-amd64.sha256
crates/tpm-core/tests/fixtures/ima/: README.md  ubuntu-24.04-tcb-amd64.ascii
crates/tpm-core/wit/: secure-log.wit
crates/tpm-tls/: Cargo.toml
crates/tpm-tui/: Cargo.toml
crates/tpm-wasi/: Cargo.toml
crates/tpm-wasi/src/: main.rs
crates/tpmd/: Cargo.toml
crates/tpmd/src/: lib.rs  main.rs  tls.rs
crates/tpmd/tests/: http.rs
crates/vtpm-backend/: Cargo.toml
crates/vtpm-backend/src/: lib.rs
deploy/observability/: README.md  docker-compose-full.yml  docker-compose.yml  grafana-datasources.yaml  multi-cluster.md  prometheus.yml
docs/: a1-capture-handoff.md  linux-handoff.md  real-node-handoff.md
docs/deploy/: control-plane.md  live-mesh.md  load-rig.md
docs/design/: application-appraisal.md  attestation-roadmap.md  control-plane-roadmap.md  distributed-attestation-mesh.md  distributed-log-shipping-lthash.md  event-log-attestation.md  in-tree-completion-plan.md  measured-merkle-anchoring.md  measured-state-transitions.md  mesh-integration-roadmap.md  mesh-primitives-roadmap.md  mma-upgrade.md  mss-roadmap.md  (+5 more)
scripts/: capture-eventlog-aarch64.sh  capture-eventlog.sh  capture-node.sh  eventlog-guest-cloud-init.yaml
src/: app.rs  main.rs  plan.rs  vtpm_bridge.rs
tests/: cli.rs  smoke_workflows.rs  vtpm_smoke.rs
(+51 files in other folders)
