[workspace]
resolver = "2"
members = [
    ".",
    "crates/tpm-core",
    "crates/tpm-tui",
    "crates/tpm-wasi",
    "crates/tpmd",
]

[package]
name = "tpm"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[features]
default = []
tpm-hw = ["tpm-core/tpm-hw"]
vtpm = ["tpm-core/vtpm"]

[[bin]]
name = "tpm"
path = "src/main.rs"

[dependencies]
tpm-core.workspace = true
tpm-tui.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
tpm-core = { path = "crates/tpm-core" }
tpm-tui = { path = "crates/tpm-tui" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

# HTTP
axum = "0.8"

# Test
tempfile = "3"
