[workspace]
resolver = "2"
members = [
    ".",
    "crates/tpm-core",
    "crates/tpm-tui",
    "crates/tpm-wasi",
    "crates/tpmd",
    "crates/tpm-tls",
    "crates/citadel-mesh",
    "crates/citadel-agent",
    "crates/citadel-control-plane",
    "crates/citadel-mss",
    "crates/citadel-spiffe",
    "crates/citadel-otel-schema",
    "crates/citadel-metrics-exporter",
    "crates/citadel-telemetry",
    "crates/citadel-beacon",
    "crates/citadel-spire-plugin",
    "crates/citadel-spire-controller",
    "crates/citadel-trust-sync",
    "crates/vtpm-backend",
]

[package]
name = "tpm"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[features]
default = []
tpm-hw = ["tpm-core/tpm-hw"]
vtpm = ["dep:vtpm-backend"]

[[bin]]
name = "citadel"
path = "src/main.rs"

[dependencies]
tpm-core.workspace = true
tpm-tui.workspace = true
secure-log-sqlite = { git = "https://github.com/tegmentum/secure-log.git", branch = "main" }
vtpm-backend = { path = "crates/vtpm-backend", optional = true }
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
# Plain-HTTP client for `citadel cluster` (queries the control-plane API); no TLS
# (local endpoint) to avoid a rustls provider in this binary.
ureq = { version = "2", default-features = false }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
tpm-core = { path = "crates/tpm-core" }
tpm-tui = { path = "crates/tpm-tui" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

# HTTP
axum = "0.8"

# Test
tempfile = "3"
