[package]
name = "citadel-caps"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel continuously-earned capabilities — attenuable, lease-bound, freshness-bound tokens (CAP1)"

[dependencies]
citadel-mesh = { path = "../citadel-mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
