[package]
name = "citadel-control-plane"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel control plane: a verifying aggregator over the attestation mesh (not a root of trust)"

[dependencies]
citadel-mesh = { path = "../citadel-mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
