[package]
name = "citadel-control-plane"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel control plane: a verifying aggregator over the attestation mesh (not a root of trust)"

[dependencies]
citadel-mesh = { path = "../citadel-mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }
redb = "2"
postgres = { version = "0.19", optional = true }

[features]
# PgStore (CP7): a Postgres-backed durable store. Off by default — pulls the
# blocking `postgres` client and needs a live database; its test is `#[ignore]`d.
postgres-store = ["dep:postgres"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
