[package]
name = "citadel-federation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel cross-mesh federation — signed trust bundles + translate-and-limit import (FED1)"

[dependencies]
citadel-mesh = { path = "../citadel-mesh" }
serde = { workspace = true }
serde_json = { workspace = true }
