[package]
name = "citadel-mesh"
edition.workspace = true
version.workspace = true
license = "Apache-2.0"
description = "Citadel distributed attestation mesh: node identity, SWIM-inspired gossip membership, peer witnessing, and attestation evidence types"

[dependencies]
tpm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
reed-solomon-erasure = "6"
lthash-rs = "1.0.1"
sha3 = { version = "0.10", default-features = false }
# A2: X.509 CA-chain authority validation for Secure Boot db/dbx. Optional so
# the core stays lean (no X.509 stack) unless a deployment needs CA anchors.
# Pinned to an audited commit (a security-sensitive dep must not track a moving
# branch in a shipped build); bump deliberately after reviewing upstream changes.
x509-path = { git = "https://github.com/tegmentum/pkcs11-x509.git", rev = "987c9db83ce394f900b3764150fd4196a6eb9102", optional = true }

[features]
# Validate EV_EFI_VARIABLE_AUTHORITY authorities that chain to a trusted db CA
# (vs. only pinned-cert membership).
x509-authority = ["dep:x509-path"]

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
