[package]
name = "citadel-metrics-exporter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel Prometheus /metrics exporter: projects the control plane's verified security state (OBS2)"

[dependencies]
citadel-control-plane = { path = "../citadel-control-plane" }
citadel-mesh = { path = "../citadel-mesh" }
citadel-otel-schema = { path = "../citadel-otel-schema" }

[dev-dependencies]
citadel-mesh = { path = "../citadel-mesh" }
