[package]
name = "citadel-mss"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Mesh-Sealed Secrets: quorum-gated, mesh-governed secret release over Citadel (MSS1 prototype)"

[dependencies]
citadel-mesh = { path = "../citadel-mesh" }
tpm-core = { path = "../tpm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = "1"
rand = "0.8"
frost-ed25519 = { version = "2", features = ["serde"] }
sharks = "0.5"
