[package]
name = "citadel-spire-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Citadel SPIRE NodeAttestor plugin: mesh trust gates SVID issuance (SP2)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "citadel-spire-plugin"
path = "src/main.rs"

[[bin]]
name = "citadel-spire-agent-plugin"
path = "src/bin/agent_plugin.rs"

[dependencies]
citadel-spiffe = { path = "../citadel-spiffe" }
citadel-mesh = { path = "../citadel-mesh" }
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
rustls-pemfile = "2"
rcgen = "0.13"
base64 = "0.22"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = "0.1"
serde_json = { workspace = true }
