[package]
name = "tpm-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "tpm"
path = "src/main.rs"

[dependencies]
tpm-core.workspace = true
tpm-tui.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
