[package]
name = "tpm-core"
edition.workspace = true
version.workspace = true

[features]
default = ["sqlite"]
# SQLite-backed persistent store (native targets).
sqlite = ["dep:rusqlite"]
# Enable real TPM hardware backend via tss-esapi.
tpm-hw = ["dep:tss-esapi"]
# Enable in-process vTPM via libtpms WASM component.
vtpm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true

# Optional: SQLite persistence (native only)
rusqlite = { workspace = true, optional = true }

# Optional: real TPM backend
tss-esapi = { version = "8.0.0-alpha.2", optional = true }

# Optional: in-process vTPM via WASM
wasmtime = { version = "43", optional = true }
wasmtime-wasi = { version = "43", optional = true }

[dev-dependencies]
tempfile.workspace = true
