[package]
name = "tpm-core"
edition.workspace = true
version.workspace = true

[features]
default = ["sqlite"]
# SQLite-backed persistent store (native targets).
sqlite = ["dep:rusqlite"]
# Enable real TPM hardware backend via tss-esapi.
tpm-hw = ["dep:tss-esapi"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true

# Tamper-evident audit log: extracted to its own repo so other
# projects can reuse it. tpm-core re-exports its public surface
# and provides a TPM-backed CheckpointSigner.
secure-log = { git = "https://github.com/tegmentum/secure-log.git", branch = "main" }
secure-log-sqlite = { git = "https://github.com/tegmentum/secure-log.git", branch = "main" }

# Used by vtpm_credential.rs for canonical CBOR serialization of
# vTPM credentials. Independent of secure-log's CBOR encoder.
ciborium = "0.2"

# Optional: SQLite persistence (native only)
rusqlite = { workspace = true, optional = true }

# Optional: real TPM backend (tss-esapi).
#
# tss-esapi-sys ships pre-generated bindings only for a whitelist of
# (arch, os) tuples. macOS arm64 is not on that list, so we enable
# `generate-bindings` there — this runs bindgen against the tpm2-tss
# headers at build time and requires libclang (present by default
# with Xcode Command Line Tools).
#
# System prerequisites for --features tpm-hw:
#   Linux:  install libtss2-dev (Debian/Ubuntu) or tpm2-tss-devel (Fedora)
#   macOS:  brew install tpm2-tss  (provides both headers and libraries)
[target.'cfg(target_os = "macos")'.dependencies]
tss-esapi = { version = "8.0.0-alpha.2", optional = true, features = ["generate-bindings"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tss-esapi = { version = "8.0.0-alpha.2", optional = true }

[dev-dependencies]
tempfile.workspace = true
