[package]
name = "tpmd"
edition.workspace = true
version.workspace = true

[features]
default = []
# Run on the libtpms-WASM vTPM (selectable at runtime via TPMD_BACKEND=vtpm).
vtpm = ["dep:vtpm-backend"]

[dependencies]
tpm-core.workspace = true
vtpm-backend = { path = "../vtpm-backend", optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
